# cmogl

./: CMakeLists.txt  README.md  main.cpp
HeaderFiles/: CMakeLists.txt  EBO.h  VAO.h  VBO.h  shaderClass.h
HeaderFiles/cpp/: EBO.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
glad/: CMakeLists.txt
glad/include/: glad.h
glad/src/: glad.c
